# reef-plc-normalizer

./: .gitignore  AGENTS.md  README.md  repository.yaml
.github/workflows/: reef-plc-normalizer.yaml
reef_plc_normalizer/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  run.sh
reef_plc_normalizer/app/: Cargo.toml  packed_mqtt_layout.yaml
reef_plc_normalizer/app/src/: main.rs
scripts/: check-release.sh  prepare-release.sh  release.sh
